# bigcrittercolor

./: .buildinfo  .gitignore  404.html  README.md  conf.py  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  readthedocs.yaml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
1projprep/: index.html
3segmentation/: index.html
4filterextract/: index.html
_build/doctrees/: environment.pickle  (+1 more)
_sources/: index.rst.txt
docs/: 1projprep.md  2imgdownload.md  3segmentation.md  4filterextract.md  5traits.md  clusterextract.md  conf.py  imgdownload.md  index.md  index.rst  projprep.md  segmentation.md
qmd_eval/: beetles.py  qmds_aeshna_cluster.py  qmds_aeshna_color_cluster.py  qmds_aeshna_segment.py  qmds_aeshna_segment_indv_vis.py  qmds_beetles.py  qmds_dragonflies_sampled.py  qmds_wing_clustering.py
scratch_experiments/: autoencoder_average.py  avg_img_size.py  bilat_blurs_vis.py  butterflies.py  colaspidema.py  deadass_just_segment.py  download_annotators.py  exif_metadata.py  group_histogram_equalize.py  import_old_training_data.py  inertia_based_sym.py  infer_masks_from_blurred.py  obs_org_download.py  orb_average.py  patch_cluster_with_without_bilat.py  patches_and_reconstruct.py  rbg.py  region_growing2.py  region_growing4.py  rigid_transform_based_sym.py  sam_on_seg_pieces.py  serena_folder_bug.py  setsg.py  show_improves.py  spiders.py  testing_clust_filter_efficiency.py  train_beetle_segmenter.py  verticalize2.py  webpage.html
segmentation/: index.html
site/: 404.html  index.html  objects.inv
tests/: conftest.py  test_1_createBCCFolder.py  test_2_downloadiNatImageData.py  test_3_inferMasks.py  test_4_filterExtractSegs.py  test_clusterByImgFeatures.py  test_clusterMasksExtractSegs.py  test_createInitialFilter.py  test_createbccfolder.py  test_createfilter.py  test_downloadiNatGenusData.py  test_downloadiNatRandImgs.py  test_downloadinatgenusimgs.py  test_filterclustermasks.py  test_getSymmetry.py  test_getstatus.py  test_inferclustermorphs.py  test_infermasks.py  test_makeCollage.py  test_rebuildrecords.py  test_showbccimgs.py  test_trimblobsidesonaxis.py  test_verticalize.py  test_verticalizeImg.py
visual_tests/: reasonable_flashcards.py  rocksdb.py
(+364 files in other folders)
