[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "bigcrittercolor"
version = "0.1.0"
authors = [
    {name = "Jacob Idec", email = "jacob.idec@ufl.edu"},
]
description = "Pipeline and tools for extracting organismal color info from iNaturalist images"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}

classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests", # used in downloader
    "pandas", "numpy", "matplotlib", "scipy",
    "opencv-python", "pillow", "scikit-image",
    "scikit-learn",
    "diffusers", "huggingface-hub", # groundedSAM dependencies
    #"torch", "torchvision",
    #"segment-anything@git+https://github.com/facebookresearch/segment-anything",
    #"ninja", "setuptools", "GroundingDINO@git+https://github.com/IDEA-Research/GroundingDINO",
    'importlib-metadata; python_version<"3.8"'
]

#[tool.poetry.dependencies]
#python = "^3.6"
#my-dependency = { git = "https://github.com/facebookresearch/segment-anything.git", branch = "main" }
#my-dependency2 = { git = "https://github.com/IDEA-Research/GroundingDINO.git", branch = "main"}

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/